[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/editor/FileAccessCtrl/FileAccessCtrl.gd" type="Script" id=1]
[ext_resource path="res://src/utils/AnimatedPopupAnim/AnimatedPopupAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/editor/FileAccessCtrl/FileUpdateChecker.tscn" type="PackedScene" id=3]


[node name="FileAccessCtrl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -208.0
margin_right = 308.0
margin_bottom = 208.0
window_title = "Otw√≥rz plik"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.tscn" )
show_hidden_files = true
current_dir = "/home/godot/Pobrane/mega-man-maker-mmlv-editor-master/Project"
current_path = "/home/godot/Pobrane/mega-man-maker-mmlv-editor-master/Project/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedPopupAnim" parent="OpenFileDialog" instance=ExtResource( 2 )]

[node name="SaveFileDialog" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -208.0
margin_right = 308.0
margin_bottom = 208.0
window_title = "Zapisz plik"
resizable = true
access = 2
filters = PoolStringArray( "*.tscn" )
current_dir = "/home/godot/Pulpit/Foxy-Adventure"
current_path = "/home/godot/Pulpit/Foxy-Adventure/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedPopupAnim" parent="SaveFileDialog" instance=ExtResource( 2 )]

[node name="FileUpdateChecker" parent="." instance=ExtResource( 3 )]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="detected" from="FileUpdateChecker" to="." method="_on_FileUpdateChecker_detected"]
